Fixing the text alignment in homepage. Adding more space in form's description.

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,11 +4,15 @@
   background-position: center;
   background-size: cover;
 }
+.padding-sides {
+  padding: 0px 34px;
+}
 
 .top-right-bloc {
   display: flex;
+  padding-top: 100px;
   justify-content: center;
-  align-items: center;
+  align-items: top;
   background: $m-blue;
   color: white;
   border-top: 50px solid $m-bluelight;
